src/objects/sfLma__License__c.object
<CustomObject>
    <description>An object that replicates information from the license object in the subscriber&apos;s Salesforce organization. Records are created each time a subscriber successfully installs a package.</description>
    <label>License</label>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licenses</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>sfLma__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the Account associated with the license after the partner converts the Lead to an account as part of Lead Conversion process</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001JvRMEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field displays the Contact associated with the license after the partner converts the Lead to a contact as part of Lead Conversion process</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000001JvR6EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Expiration_Date__c</fullName>
        <description>A formula field which displays the Expiration Date or “Does not expire&quot; based on the value in the Expiration field.</description>
        <formula>if(  sfLma__Expiration__c &lt;&gt; date(1970,1,1),text( sfLma__Expiration__c ),&quot;Does not expire&quot;)</formula>
        <label>Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Expiration__c</fullName>
        <description>Expiration Date of the License, 1/1/1970 represents a perpetual license</description>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Help__c</fullName>
        <formula>(HYPERLINK(&quot;http://www.salesforce.com/docs/en/lma/index_CSH.htm#lma_license_detail.htm&quot;, &quot; Help for License&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <label>Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Install_Date__c</fullName>
        <description>The Date this Package Version was initially installed by the developer. (Does not get updated as part of upgrades.)</description>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sfLma__Instance__c</fullName>
        <formula>sfLma__Org_Instance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Salesforce instance or pod on which this subscriber organization currently resides.</inlineHelpText>
        <label>Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Is_Sandbox__c</fullName>
        <description>This read-only field indicates if the subscriber org is a sandbox</description>
        <formula>sfLma__Subscriber_Org_Is_Sandbox__c</formula>
        <label>Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfLma__Last_Modified__c</fullName>
        <inlineHelpText>The last time the organization information on this page was updated.</inlineHelpText>
        <label>Information Current As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sfLma__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead generated from this install. This field becomes blank once the lead is converted to an account / contact in the lead conversion process</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N30000001JvRAEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__License_Status__c</fullName>
        <formula>$RecordType.Name</formula>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__License_Type__c</fullName>
        <description>This field indicates the type of license record. For example, if the license record is &quot;Read-Only&quot;, this license record cannot be modified.</description>
        <label>License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Licensed_Seats__c</fullName>
        <description>A text field which displays the number of Licensed Seats or “Site License” based on the numeric field</description>
        <formula>IF( sfLma__Seats__c &gt;=0,  TEXT(sfLma__Seats__c ), &quot;Site License&quot;)</formula>
        <label>Licensed Seats</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Org_Edition__c</fullName>
        <description>The type of org for this subscriber.</description>
        <formula>sfLma__Org_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Edition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Org_Instance__c</fullName>
        <description>The server or pod on which this org resides.</description>
        <label>Org Instance</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Org_Status_Formula__c</fullName>
        <label>Org Status Formula</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Org_Status__c</fullName>
        <description>The status of the subscriber org as of the last time a License record was updated.</description>
        <formula>sfLma__Org_Status_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Org_Trial_Expiration__c</fullName>
        <label>Org Trial Expiration</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Org_Type__c</fullName>
        <label>Org Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_License_ID__c</fullName>
        <description>ID of package license for uninstall tracking</description>
        <label>Package License ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_Version_Number__c</fullName>
        <formula>sfLma__Version_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Version Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Package_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipName>R00N30000001JvQxEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>sfLma__Package__c</referenceTo>
        <relationshipLabel>Licenses</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfLma__Proxy_User__c</fullName>
        <description>Proxy user in subscriber org</description>
        <label>Proxy User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Seats__c</fullName>
        <description>number of seats covered by license</description>
        <label>Seats</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfLma__Status__c</fullName>
        <description>This is the Status of the Package License in the Subscriber Org</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Uninstalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_ID__c</fullName>
        <description>This is the ID of the Subscriber organization</description>
        <label>Subscriber Org ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Subscriber_Org_Is_Sandbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicates if the Subscriber organization is a sandbox</description>
        <label>Subscriber Org Is Sandbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfLma__Trial_Expiration_Date__c</fullName>
        <description>The date on which this org&apos;s trial expires, if applicable.</description>
        <formula>sfLma__Org_Trial_Expiration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the subscriber organization is a trial, the date it expires.</inlineHelpText>
        <label>Org Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfLma__Used_Licenses__c</fullName>
        <label>Used Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sfLma__Version_Number__c</fullName>
        <label>Version Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>sfLma__All</fullName>
        <columns>NAME</columns>
        <columns>sfLma__Lead__c</columns>
        <columns>sfLma__Package_Version__c</columns>
        <columns>sfLma__Licensed_Seats__c</columns>
        <columns>sfLma__Install_Date__c</columns>
        <columns>sfLma__Expiration_Date__c</columns>
        <columns>sfLma__Is_Sandbox__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>sfLma__Active</fullName>
        <active>true</active>
        <label>Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Expired</fullName>
        <active>true</active>
        <label>Expired</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Suspended</fullName>
        <active>true</active>
        <label>Suspended</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Trial</fullName>
        <active>true</active>
        <label>Trial</label>
    </recordTypes>
    <recordTypes>
        <fullName>sfLma__Uninstalled</fullName>
        <active>true</active>
        <label>Uninstalled</label>
    </recordTypes>
</CustomObject>